[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "postProcess_drop_diameter"
version = "0.0.0"
authors = [
  { name="Rebecca Shannon", email="rebshan@bu.edu" },
]
description = "postprocess get diameters workflow"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib==3.10.0",
    "numpy==1.26.4",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "scipy==1.12.0"
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src", "tutorials","tests"
]

[project.urls]
"Homepage" = "https://github.com/rebshannon/postProcess_drop_diameter.git"
